@@ -6,6 +6,8 @@
 Features
 --------
 
+- Extended check for valid variable and constraint names in PIP writer.
+
 Performance improvements
 ------------------------
 
